# mbar

./: .gitignore  .qmlls.ini  Cargo.toml  README.md  build.rs  scratch.rs  test_output.txt  test_qt.rs
.cargo/: config.toml
.github/workflows/: ci.yml
src/: datetime_stats.rs  google_calendar.rs  main.rs  system_stats.rs  weather_stats.rs
ui/: Calendar.qml  DateComponent.qml  DateTime.qml  SystemStats.qml  TimeComponent.qml  WeatherStats.qml  main.qml
